--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "nookies": "^2.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.39",
