--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev src/server.ts"
+    "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -16,7 +17,8 @@
     "eslint-plugin-prettier": "3.2.0",
     "git-commit-msg-linter": "^4.1.3",
     "prettier": "^2.7.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
