--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "^8.23.0",
@@ -24,9 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "import": "^0.0.6",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "uuid": "^8.3.2"
   }
 }
