--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "lint": "eslint . --ext .ts --fix"
+    "lint": "eslint . --ext .ts --fix",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
@@ -21,7 +23,9 @@
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
     "git-commit-msg-linter": "^4.1.3",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0"
   },
