--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.0.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -37,10 +39,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
+    "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9",
     "typescript": "^4.8.2",
