--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.9'
-services:
 
+services:
   postgres:
     image: 'postgres:alpine'
 
@@ -20,5 +20,11 @@ services:
 
   redis:
     image: 'redis:alpine'
+
+    # Porta padrão
     ports:
       - '6379:6379'
+    container_name: 'db_redis_gestao_pedidos'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+
