--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.0.1",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
     "@types/redis": "^4.0.11",
@@ -41,6 +42,7 @@
     "express-async-errors": "^3.1.1",
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
