--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "celebrate": "^15.0.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
