feat: sending email via aws ses

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 # Aplication
 APP_SECRET=
-PORT=3333
+PORT=
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
@@ -9,4 +9,16 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
 
-#AWS Identification
+# Mail
+MAIL_DRIVER=ethereal
+
+##Storage
+disk=local
+
+## AWS Credentials
+AWS_BUCKET=
+AWS_BUCKET_REGION=
+AWS_BUCKET_URL=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
