refactor: applying dependency injection with tsyringe

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,12 +13,14 @@ REDIS_PASS=
 MAIL_DRIVER=ethereal
 
 ##Storage
-disk=local
+STORAGE_DRIVER=local
 
 ## AWS Credentials
 AWS_BUCKET=
 AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
+
+# Email SES
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
