--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "rate-limiter-flexible": "^2.3.10",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0",
     "typeorm": "^0.3.9",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2"
