feat: upload files from amazon s3

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,11 +9,11 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=
 
-# Mail
+# Mail => ses or ethereal
 MAIL_DRIVER=ethereal
 
-##Storage
-STORAGE_DRIVER=local
+# Storage => s3 or disk
+STORAGE_DRIVER=disk
 
 ## AWS Credentials
 AWS_BUCKET=
