--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -14,6 +14,7 @@
   ],
   "rules": {
     "no-console": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "@typescript-eslint/ban-types": "off"
   }
 }
