--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "express-async-errors": "^3.1.1",
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "mongodb": "^4.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
