--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.6",
     "@types/redis": "^4.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
@@ -52,6 +53,7 @@
     "rate-limiter-flexible": "^2.3.10",
     "redis": "^4.3.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.5.0",
     "tsyringe": "^4.7.0",
     "typeorm": "^0.3.9",
     "typescript": "^4.8.2",
